P1-010: implement common problem details errors
